# rotors_simulator

./: GPATH  GRTAGS  GTAGS
rotors_control/src/nodes/: .#roll_pitch_yawrate_thrust_controller_node.cpp
rotors_danylo/: CMakeLists.txt  package.xml  rotors_danylo_rosconsole.conf
rotors_danylo/include/rotors_danylo/: common.hpp  parameters.hpp  parameters_ros.hpp
rotors_danylo/include/rotors_danylo/nodes/: lqr_controller_node.hpp
rotors_danylo/launch/: frequency_probe.launch  lqr_controller.launch
rotors_danylo/resource/: lqr_controller.yaml
rotors_danylo/src/nodes/: frequency_probe_node.cpp  lqr_controller_node.cpp
rotors_description/urdf/: mav_generic_odometry_sensor.gazebo
rotors_gazebo/launch/: mav_hovering_example.launch
rotors_gazebo/src/: hovering_example.cpp
